--- a/profile.html
+++ b/profile.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-	<title>Kian G. Abordo</title>
-		<head>
-			<meta charset = "UTF-8">
-			<meta name = "viewport" content="width=device-width, initial-scale=1.0">
-			<link rel="stylesheet" href="abordo.css">
-		</head>
-		<body>
-		<header class = "site-header">
-			 <navi>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>John Doe</h1>
+        <p>Web Developer</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I'm a passionate web developer with experience in HTML, CSS, and JavaScript. I love building responsive and user-friendly websites.</p>
+        </section>
+
+        <section id="experience">
+            <h2>Experience</h2>
             <ul>
-                <li><a href = "Home">Home</a></li>
-				<li><a href = "Works">Works</a></li>
-                <li><a href = "PNC">PNC</a></li>
-
+                <li>Web Developer at XYZ Company (2018-present)</li>
+                <li>Freelance Web Developer (2016-2018)</li>
             </ul>
-			</navi>
+        </section>
 
-		</header>
-		
-		<div class="container">
-        <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/273780366_1051263369079701_2911425319794549429_n.jpg?stp=dst-jpg_s200x200&amp;_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=5f2048&amp;_nc_eui2=AeHa-UgQwbN7NrpJpzKgKPdbNUNRunnhYWw1Q1G6eeFhbIHUEBNAKATmhjVBhPS9F18E_LZz7ey0xOPLVOsSY70d&amp;_nc_ohc=3Fw6h7nLZvEAb4GYy8_&amp;_nc_ht=scontent.fmnl16-1.fna&amp;oh=00_AfCsVDZ0eUTje3f6QwCkLJdl3dBsltfvZhphrGBiz8SqLw&amp;oe=662052AF" alt="Picture" class="p-pic">
-			<main class= "body-content">
-			
-				<section class= "hero-content">
-				<h1>Hello,</h1>
-				<p><pre>This is my Resume
-My Name is Kian G. Abordo
-I am a 1st Year Computer Science student, currently studying at Pamantasan ng Cabuyao</pre></p>
-				<ul><h1>Hobbies</h1>
-					<li><p>Video Games</p></li>
-					<li>jkqwruh wqhwqr howqrioo qwrwqerh</li>
-					<li>kweo wqkoewq</li>
-					</ul>
-				
-				</div>
-				<div class="container">
-				<div class = "site-footer">
-					<footer-links>
-					<ol style="list-style-type:none;"> 
-					<li> You can follow me in any of these Social Media Platforms</li>
-					<ul style="list-style-type:none;">
-					<li><a href = "https://www.facebook.com/kian.abordo.37"> Facebook </a></li>
-					<li><a href = "https://github.com/csabordo">  Github </a></li>
-					</ul>
-					<ol>
-					</footer-links>
-					</div>
-					</div>
-		</body>
-		
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li>Bachelor's Degree in Computer Science - University ABC (2015-2018)</li>
+            </ul>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>Responsive Design</li>
+                <li>Version Control (Git)</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: john@example.com</p>
+            <p>Phone: 123-456-7890</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 John Doe</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
