--- a/index.html
+++ b/index.html
@@ -8,61 +8,570 @@
 </head>
 <body>
     <header>
-        <h1>John Doe</h1>
-        <p>Web Developer</p>
+        <h2>Kian G. Abordo</h2>
+        <div class="nav-bar">
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#Works">Works</a></li>
+                <li><a href="#Schedule">Schedule</a></li>
+                <li><a href="#carousel">Mission, Vision, Values</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I'm a passionate web developer with experience in HTML, CSS, and JavaScript. I love building responsive and user-friendly websites.</p>
-        </section>
+        <div class="container">
+            <div class="article" section id="about">
+                <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/273780366_1051263369079701_2911425319794549429_n.jpg?stp=dst-jpg_s200x200&amp;_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=5f2048&amp;_nc_eui2=AeHa-UgQwbN7NrpJpzKgKPdbNUNRunnhYWw1Q1G6eeFhbIHUEBNAKATmhjVBhPS9F18E_LZz7ey0xOPLVOsSY70d&amp;_nc_ohc=3Fw6h7nLZvEAb4GYy8_&amp;_nc_ht=scontent.fmnl16-1.fna&amp;oh=00_AfCsVDZ0eUTje3f6QwCkLJdl3dBsltfvZhphrGBiz8SqLw&amp;oe=662052AF" alt="Picture" class="p-pic">
+                <h2>About Me</h2>
+                <p>I'm Kian G. Abordo. I am a First Year Computer Science Student currently studying in University of Cabuyao (Pamantasan ng Cabuyao). Outside of the school I turn to hobbies which are Video Games and Reading Books.</p>
+            </div>
 
-        <section id="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li>Web Developer at XYZ Company (2018-present)</li>
-                <li>Freelance Web Developer (2016-2018)</li>
-            </ul>
-        </section>
+            <section id="Works" class="article">
+                <h2>Works</h2>
+                <ul class="works_list">
+                    <a href = "prelim.html">
+					<div class="works_article">
+                        <li>Prelim</li>
+                    </div>
+					</a>
+					<a href ="midterm.html">
+                    <div class="works_article">
+                        <li>Midterm</li>
+                    </div>
+					</a>
+					<a href ="final.html">
+                    <div class="works_article">
+                        <li>Final</li>
+                    </div>
+					</a>
+                </ul>
+            </section>
+            <section id="Schedule" class="article">
+                <h2>Schedule</h2>
+               <table>
+  <thead>
+    <tr>
+	  <th>Time</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+      <th>Sunday</th>
+    </tr>
+  </thead>
+  <tbody>
+    
+      <tr>
+      <td>6:00 - 6:30 am</td> 
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>6:30 - 7:00 am</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>7:00 - 7:30 am</td>
+	  <td class = "styleCCS103" rowspan = "6">
+	     <p>Class #2</p>
+         <h2>
+         <b>CCS103</b>
+         </h2>
+         <i>J. Claudel</i>
+         <br>
+         <p>(Laboratory)</p>
+         <br>
+         <p>COMLAB 1</p>
+	 </td>
+	   <td class = "styleHIS101" rowspan = "3" >
+		<p>Class #569</p>
+        <h2>
+        <b>HIS101</b>
+        </h2>
+        <i>P. Saquing</i>
+        <br>
+        <p>(Lecture)</p>
+        <br>
+        <p>L4</p>
+	 </td>
+	   <td class = "styleCCS103" rowspan = "4">
+		<p>Class #2</p>
+         <h2>
+         <b>CCS103</b>
+         </h2>
+         <i>J. Claudel</i>
+         <br>
+         <p>(Lecture)</p>
+         <br>
+         <p>310</p>
+	   </td>
+	   <td></td>
+	   <td class = "styleHIS101" rowspan = "3" >
+		<p>Class #569</p>
+        <h2>
+        <b>HIS101</b>
+        </h2>
+        <i>P. Saquing</i>
+        <br>
+        <p>(Lecture)</p>
+        <br>
+        <p>L4</p>
+		</td>
+	   <td class = "styleNSTP" rowspan = "6">
+	    <p>Class #591</p>
+        <h2>
+        <b>NSTP2</b>
+        </h2>
+        <i>J. Rufo</i>
+		<br>
+        <p>(Lecture)</p>
+        <br>
+        <p>L4</p>
+		</td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>7:30 - 8:00 am</td>
+	  <td></td>
+	  <td></td>
+    </tr>
+    <tr>
+      <td>8:00 - 8:30 am</td>
+	  <td></td>
+	  <td></td>
+    </tr>
+    <tr>
+      <td>8:30 - 9:00 am</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+   </tr>
+    <tr>
+      <td>9:00 - 9:30 am</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>9:30 - 10:00 am</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>10:00 - 10:30 am</td>
+	  <td class = "styleHMN" rowspan = "3">
+	  <p>Class #570</p>
+      <h2>
+      <b>HMN101</b>
+      </h2>
+      <i>R. Ysulan</i>
+      <br>
+      <p>(Lecture)</p>
+      <br>
+      <p>L5</p>
+	 </td>
+	   <td></td>
+	   <td><td class = "styleHMN" rowspan = "3">
+	  <p>Class #570</p>
+      <h2>
+      <b>HMN101</b>
+      </h2>
+      <i>R. Ysulan</i>
+      <br>
+      <p>(Lecture)</p>
+      <br>
+      <p>L5</p>
+	 </td></td>
+	   <td></td>
+	   <td class = "styleCCS114" rowspan = "4"> 
+	   <p>Class #39</p>
+       <h2>
+       <b>CCS114</b>
+       </h2>
+       <i>C. Morano</i>
+       <br>
+       <p>(Lecture)</p>
+       <br>
+       <p>COMLAB 2</p></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>10:30 - 11:00 am</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>11:00 - 11:30 am</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>11:30 - 12:00 pm</td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>12:00 - 12:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>12:30 - 1:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>1:00 - 1:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td class = "styleCCS114" rowspan = "6">
+	   <p>Class #39</p>
+       <h2>
+       <b>CCS114</b>
+       </h2>
+       <i>C. Morano</i>
+       <br>
+       <p>(Laboratory)</p>
+       <br>
+       <p>COMLAB 5</p>
+	   </td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>1:30 - 2:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>2:00 - 2:30 pm</td>
+	  <td class = "styleCCS105" rowspan = "4">
+	  <p>Class #38</p>
+      <h2>
+      <b>CCS105</b>
+      </h2>
+      <i>F. Huerte</i>
+      <br>
+      <p>(Lecture)</p>
+      <br>
+      <p>Network Room</p>
+	  </td>
+	  <td class = "styleCCS105" rowspan = "6">
+	  <p>Class #38</p>
+      <h2>
+      <b>CCS105</b>
+      </h2>
+      <i>F. Huerte</i>
+      <br>
+      <p>(Laboratory)</p>
+      <br>
+      <p>COMLAB 1</p>
+	  </td>
+	   <td class = "stylePED" rowspan = "4"> 
+	   <p>Class #572</p>
+       <h2>
+       <b>PED102</b>
+       </h2>
+       <i>M. Elbo</i>
+       <br>
+       <p>(Lecture)</p>
+       <br>
+       <p>GYM1</p></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>2:30 - 3:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>3:00 - 3:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>3:30 - 4:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>4:00 - 4:30 pm</td>
+	  <td class = "styleCOM" rowspan = "3">
+	  <p>Class #571</p>
+       <h2>
+       <b>COM101</b>
+       </h2>
+       <i>J. Prado</i>
+       <br>
+       <p>(Lecture)</p>
+       <br>
+       <p>L4</p></td>
+	   <td class = "stylePHD" rowspan = "2">
+	   <p>Class #573</p>
+       <h2>
+       <b>PHD102</b>
+       </h2>
+       <i>R. Balidio</i>
+       <br>
+       <p>(Lecture)</p>
+       <br>
+       <p>GYM1</p>
+	   </td>
+	   <td class = "styleCOM" rowspan = "3">
+	  <p>Class #571</p>
+       <h2>
+       <b>COM101</b>
+       </h2>
+       <i>J. Prado</i>
+       <br>
+       <p>(Lecture)</p>
+       <br>
+       <p>L4</p>
+	   </td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>4:30 - 5:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>5:00 - 5:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>5:30 - 6:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>6:00 - 6:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>6:30 - 7:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>7:00 - 7:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>7:30 - 8:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>8:00 - 8:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>8:30 - 9:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>9:00 - 9:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>9:30 - 10:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>10:00 - 10:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+    <tr>
+      <td>10:30 - 11:00 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+	<td>11:00 - 11:30 pm</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+	<td>11:30 - 12:00 am</td>
+	  <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+    </tr>
+	<td style = "background-color: green; color: white;">Time</td>
+	  <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+      <th>Sunday</th>
+    </tr>
+  </tbody>
+</table>
+            </section>
 
-        <section id="education">
-            <h2>Education</h2>
-            <ul>
-                <li>Bachelor's Degree in Computer Science - University ABC (2015-2018)</li>
-            </ul>
-        </section>
+            <section id="carousel" class="article carousel-container">
+                <div class="carousel">
+                    <div class="carousel-item active">
+                        <h1>Mission</h1>
+                        <p>As an institution of higher learning, UC (PnC) is committed to equip individuals with knowledge, skills, and values that will enable them to achieve their professional goals & provide leadership and service for national development.</p>
+                    </div>
+                    <div class="carousel-item">
+                        <h1>Vision</h1>
+                        <p>A premier institution of higher learning in Region IV, developing globally-competitive and value-laden professionals and leaders instrumental to community development and nation-building</p>
+                    </div>
+                    <div class="carousel-item">
+                        <h1>Values</h1>
+                        <p>As a God-fearing institution respecting multi-faith of people, PnC adheres to the following core values:
+<pre>
+Personal Dignity
+Nurturing Community
+Commitment to Excellence </pre></p>
+                    </div>
+                </div>
+                <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
+                <button class="carousel-control next" onclick="nextSlide()">&#10095;</button>
+            </section>
 
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-                <li>Responsive Design</li>
-                <li>Version Control (Git)</li>
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: john@example.com</p>
-            <p>Phone: 123-456-7890</p>
-        </section>
+            <section id="contact" class="article">
+                <h2>Contact</h2>
+				<p>Email: kian.abordo05@gmail.com</p>
+                <p>Facebook: https://www.facebook.com/kian.abordo.37/</p>
+                <p>Phone: +63 960 412 3821</p>
+				<p>GitHUB: https://github.com/csabordo</p>
+            </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 John Doe</p>
+        <p>&copy; 2024 Kian G. Abordo</p>
     </footer>
 
     <script src="script.js"></script>
