--- a/index.html
+++ b/index.html
@@ -29,24 +29,7 @@
             </div>
 
             <section id="Works" class="article">
-                <h2>Works</h2>
-                <ul class="works_list">
-                    <a href = "prelim.html">
-					<div class="works_article">
-                        <li>Prelim</li>
-                    </div>
-					</a>
-					<a href ="midterm.html">
-                    <div class="works_article">
-                        <li>Midterm</li>
-                    </div>
-					</a>
-					<a href ="final.html">
-                    <div class="works_article">
-                        <li>Final</li>
-                    </div>
-					</a>
-                </ul>
+                <a href = "works.html"><h2>Works</h2></a>
             </section>
             <section id="Schedule" class="article">
                 <h2>Schedule</h2>
