--- a/works.html
+++ b/works.html
@@ -16,10 +16,11 @@
                 <li><a href="#finals">Final</a></li>
             </ul>
             </div>
+    </header>
             <ul class="works_list">
                 <div class="works_article">
                     <li>Prelim</li>
-                    
+
                 </div>
                 <div class="works_article">
                     <li>Midterm</li>
