--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
                 <div class="works_article">
                     
                     <li>Prelim</li>
-                    <img src="https://github.com/csabordo/portfolio/blob/main/New%20folder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
+                    <img src="/Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
                 </div>
                 <div class="works_article">
                     <li>Midterm</li>
