--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <main>
         <div class="container">
             <div class="article" section id="about">
-                <img src="portfolio/New folder
-/download.jpg" alt="Picture" class="p-pic">
+                <img src="New folder/download.jpg" alt="Picture" class="p-pic">
                 <h2>About Me</h2>
                 <p>I'm Kian G. Abordo. I am a First Year Computer Science Student currently studying in University of Cabuyao (Pamantasan ng Cabuyao). Outside of the school I turn to hobbies which are Video Games and Reading Books.</p>
             </div>
