--- a/works.html
+++ b/works.html
@@ -21,10 +21,15 @@
                 <div class="works_article">
                     
                     <li>Prelim</li>
-                    <img src="/Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
+                    <img src="Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
                 </div>
                 <div class="works_article">
                     <li>Midterm</li>
+                    <img src="New folder/midterm/XCLMLAAsyF.png" alt="Description of your image">
+                    <img src="New folder/midterm/opera_7ilsgufEdi.png alt="Description of your image">
+                    <img src="Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
+                    <img src="Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
+                    <img src="Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
                 </div>
                 <div class="works_article">
                     <li>Final</li>
