--- a/works.html
+++ b/works.html
@@ -19,18 +19,22 @@
     </header>
             <ul class="works_list">
                 <div class="works_article">
-                    
+                <a href = "https://drive.google.com/drive/folders/1Dkt4PBvBva9dv9n_XoGGikb9MWYdyaKA?ths=true"> 
                     <li>Prelim</li>
-                    <img src="/Newfolder/prelim/opera_CXJp7GyuRJ.png" alt="Description of your image">
-                </div>
+                </a>
+                <a href = "https://drive.google.com/drive/folders/1tgd6mgCLTEZ3QCNiVFXpJpD_em2ml6i8?ths=true">
                 <div class="works_article">
                     <li>Midterm</li>
                 </div>
+                 </a>
+                 <a href = "https://drive.google.com/drive/folders/1_-vw4gcePhzbhQIuNCj8ALWOpJ0o0coA?usp=sharing">
                 <div class="works_article">
                     <li>Final</li>
                 </div>
+                </a>
             </ul>
-
+     </div>
+           
                 <section id="contact" class="article">
                     <h2>Contact</h2>
                     <p>Email: kian.abordo05@gmail.com</p>
