--- a/works.html
+++ b/works.html
@@ -22,6 +22,7 @@
                 <a href = "https://drive.google.com/drive/folders/1Dkt4PBvBva9dv9n_XoGGikb9MWYdyaKA?ths=true"> 
                     <li>Prelim</li>
                 </a>
+                </div>
                 <a href = "https://drive.google.com/drive/folders/1tgd6mgCLTEZ3QCNiVFXpJpD_em2ml6i8?ths=true">
                 <div class="works_article">
                     <li>Midterm</li>
